kubernetes/otel-hello/overlay/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-hello
spec:
  template:
    spec:
      containers:
      - name: otel-hello
